We are no longer trying to add extra space to posts for the action links and making the post time gray as a visual separator.
git-svn-id: https://plugins.svn.wordpress.org/editorial-calendar/trunk@222673 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/edcal.css
+++ b/edcal.css
@@ -120,7 +120,11 @@
     margin-left: 2px;
     margin-right: 2px;
     font-size: 10px;
-    padding: 0.7em 0.5em 2em 0.2em;
+    padding: 0px;
+}
+
+.posttime {
+    color: #999999;
 }
 
 .post.draggable .postlink {
